# ic-docutrack

./: Cargo.toml  Justfile  README.md  dfx.json  pnpm-lock.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml
backend/backend/src/: lib.rs
backend/did/: cargo.toml
backend/did/src/: lib.rs  orchestrator.rs  public_key.rs  user_canister.rs
backend/did/src/orchestrator/: public_file_metadata.rs  shared_files.rs  user.rs  user_canister.rs  whoami.rs
backend/did/src/user_canister/: file.rs  owner_key.rs
backend/orchestrator/: Cargo.toml
backend/orchestrator/src/: api.rs  canister.rs  client.rs  lib.rs  memory.rs  storage.rs  upgrade.rs  utils.rs
backend/orchestrator/src/api/: get_users.rs  share_file.rs  user_info.rs
backend/orchestrator/src/canister/: create_user.rs
backend/orchestrator/src/client/: orbit_station.rs
backend/orchestrator/src/storage/: config.rs  memory.rs  shared_files.rs  user_canister.rs  users.rs
backend/orchestrator/src/storage/user_canister/: create_state.rs
backend/user_canister/src/: canister.rs  lib.rs
backend/user_canister/src/client/: orchestrator.rs
backend/user_canister/src/storage/: config.rs
backend/user_canister/src/storage/files/: create_state.rs  data_storage.rs
backend/usercan/: Cargo.toml  build.rs
backend/usercan/src/: aliases.rs  api.rs  lib.rs
backend/usercan/src/api/: download_file.rs  get_alias_info.rs  get_requests.rs  request_file.rs  share_file.rs  upload_file.rs  upload_file_atomic.rs
frontend/scripts/: readCanisterIds.ts
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs  pocket_ic.rs  wasm.rs
integration-tests/src/pocket_ic/: cycles.rs  env.rs  orchestrator_client.rs
integration-tests/tests/: integration_tests.rs
integration-tests/tests/pocket_ic/: mod.rs  orchestrator.rs  user_canister.rs
just/: build.just  dependencies.just
