[workspace]
members = ["backend/orchestrator", "backend/usercan", "integration-tests"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
ic-stable-structures = "0.6.8"
candid = { version = "0.10", features = ["value"] }
ciborium = "0.2"
getrandom = { version = "0.3", default-features = false }
rand = { version = "0.9", features = ["std_rng", "small_rng"] }
rand_chacha = "0.9"
serde = "1"
serde_bytes = "0.11"
