[workspace]
members = [
  "backend/backend",
  "backend/did",
  "backend/orchestrator",
  "integration-tests",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
cargo_metadata = "0.19"
ic-cdk = "0.18"
ic-cdk-macros = "0.18"
ic-cdk-timers = "0.12"
ic-stable-structures = "0.6.8"
candid = { version = "0.10", features = ["value"] }
candid_parser = "0.2.0-beta.4"
ciborium = "0.2"
getrandom = { version = "0.3", default-features = false }
rand = { version = "0.9", features = ["std_rng", "small_rng"] }
rand_chacha = "0.9"
serde = "1"
serde_bytes = "0.11"
station-api = { git = "https://github.com/dfinity/orbit", tag = "@orbit/station-v0.5.0" }
time = { version = "0.3", default-features = false, features = ["parsing"] }
