[package]
name = "integration-tests"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = "1"
candid = { workspace = true }
did = { path = "../backend/did" }
flate2 = "1"
ic-agent = "0.40"
ic-ledger-types = "0.15.0"
ic-utils = "0.40"
log = "0.4"
pocket-ic = "9"
reqwest = { version = "0.12", default-features = false }
serde = { workspace = true }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1"

[features]
default = []
dfx = []
pocket-ic = []
