[package]
name = "usercan"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.14"
ic-cdk-macros = "0.14"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
getrandom = { workspace = true }
ciborium = { workspace = true }
rand_chacha = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
maplit = "1.0.2"